2008-08-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Clients/Nereid/Nereid/Client.cs: Patch from Jo Shields fixing bug
	where --help-query-player didn't work (BGO #546334).

2008-08-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlists.Formats/PlaylistParser.cs:
	Instead of throwing an exception when the uri scheme isn't one we support,
	simply return false to indicate the parsing failed.  Fixes bug where
	mms:// URIs wouldn't load (BGO #546392).

	* src/Libraries/Hyena/Hyena.Data.Sqlite/HyenaSqliteConnection.cs: Call
	typeof (T) once instead of N times.

2008-08-05  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlists.Formats/AsxPlaylistFormat.cs:
	Another patch from Félix Velasco, this time to fix the parsing of ASX 
	playlists (BGO #545646).

2008-08-05  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Extensions/Banshee.InternetRadio/Banshee.InternetRadio/InternetRadioSource.cs:
	Patch from Félix Velasco to select the proper source when showing the radio
	station editor (BGO #539397).

2008-08-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackFilterListView.cs:
	Enable dragging filter items (artists/albums/etc) the same as you would
	drag tracks - onto the play queue, etc (BGO #524418).

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView_DragAndDrop.cs:
	Check where the drag came from, and if it wasn't directly from the track
	view, assume it was from a filter view, and add everything in the track
	model to the drop destination instead of just the user-selected items.

	* src/Core/Banshee.Core/Resources/translators.xml: Updated

2008-08-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	Factor out activate-selection code into protected method.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs: